--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                 let delay = 1000;
                 for (let i = 0; i < 3; i++) {
                     try {
-                        const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${geminiApiKey.value}`, {
+                        const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${geminiApiKey.value.trim()}`, {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             body: JSON.stringify({
@@ -702,6 +702,11 @@
                             throw new Error(errorData.error?.message || 'API request failed');
                         }
                         const data = await response.json();
+                        // SAFETY CHECK: Ensure candidate content exists
+                        if (!data.candidates || !data.candidates[0].content) {
+                            console.warn("Safety block triggered:", data);
+                            throw new Error("Gemini blocked the response due to safety filters. Try simplifying your prompt.");
+                        }
                         return data.candidates[0].content.parts[0].text;
                     } catch (err) {
                         if (i === 2) throw err;
@@ -739,8 +744,15 @@
 
                 try {
                     let jsonString = await callGemini(prompt);
-                    // Sanitize: Remove ```json and ``` wrapping if present
-                    jsonString = jsonString.replace(/^```json\s*/, '').replace(/^```\s*/, '').replace(/```$/, '').trim();
+                    
+                    // ROBUST JSON EXTRACTOR
+                    // Finds the first '{' and the last '}' to ignore any markdown fluff
+                    const jsonStart = jsonString.indexOf('{');
+                    const jsonEnd = jsonString.lastIndexOf('}');
+                    if (jsonStart !== -1 && jsonEnd !== -1) {
+                        jsonString = jsonString.substring(jsonStart, jsonEnd + 1);
+                    }
+
                     const data = JSON.parse(jsonString);
                     
                     // Update State
@@ -778,7 +790,7 @@
                 if (!mapEl) return;
 
                 mapInstance.value = L.map('dailyMap').setView([0, 0], 2);
-                L.tileLayer('https://{s}[.basemaps.cartocdn.com/rastertiles/voyager/](https://.basemaps.cartocdn.com/rastertiles/voyager/){z}/{x}/{y}{r}.png', {
+                L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
                     attribution: '&copy; OpenStreetMap',
                     subdomains: 'abcd',
                     maxZoom: 19
